--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+div.carousel-image img {
+  height: 480px;
+  max-width: 100%;
+  width: auto;
+  object-fit: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (min-width: 1300px) {
+  div.carousel-image img {
+    height: 480px;
+    max-width: 100%;
+    width: 1080px;
+    object-fit: cover;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media only screen and (min-width: 300px) and (max-width:600px) {
+    div.carousel-image img {
+      height: 480px;
+      max-width: 100%;
+      width: auto;
+      object-fit: cover;
+    }
+  
+  }
+
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
+  div.carousel-image img {
+    height: 480px;
+    max-width: 100%;
+    width: 900px;
+    object-fit: cover;
+  }
+}
+
+.main-box {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.outer-div-courses{
+    display: flex;
+    justify-content: space-between;
+}
+.outer-div-courses div{
+    background-color: rgb(143, 196, 231);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.outer-div-courses div p:first{
+    border: 1px solid black;
 }
