--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,22 @@ div.carousel-image img {
     border-radius: 50%;
     padding: 0.5em;
 }
+
+div.col-lg-12 .novel-slider div{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.novel-slider div.card img{
+  height: 250px;
+  max-height: 250px;
+  object-fit: cover;
+}
+
+.novel-slider div.card{
+  transition: all 0s3s;
+}
+.novel-slider div.card:hover{
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
