--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,14 @@ div.carousel-image img {
   }
 }
 
-@media only screen and (min-width: 300px) and (max-width:600px) {
-    div.carousel-image img {
-      height: 480px;
-      max-width: 100%;
-      width: auto;
-      object-fit: cover;
-    }
-  
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+  div.carousel-image img {
+    height: 480px;
+    max-width: 100%;
+    width: auto;
+    object-fit: cover;
   }
+}
 
 @media only screen and (min-width: 900px) and (max-width: 1200px) {
   div.carousel-image img {
@@ -39,39 +38,68 @@ div.carousel-image img {
   align-items: center;
 }
 
-.outer-div-courses{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+.outer-div-courses {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
-.outer-div-courses div{
-    background-color: #d487dd;
-    border-radius: 10px;
-    margin: 5px auto;
-}
-
-.outer-div-courses div h5{
-    border: 1px solid black;
-    border-radius: 50%;
-    padding: 0.5em;
+.outer-div-courses div {
+  background-color: #d487dd;
+  border-radius: 10px;
+  margin: 5px auto;
 }
 
-div.col-lg-12 .novel-slider div{
+.outer-div-courses div h5 {
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 0.5em;
+}
+
+div.col-lg-12 .novel-slider div {
   margin-left: 10px;
   margin-right: 10px;
 }
 
-.novel-slider div.card img{
+.novel-slider div.card img {
   height: 250px;
   max-height: 250px;
   object-fit: cover;
 }
 
-.novel-slider div.card{
+.novel-slider div.card {
   transition: all 0s3s;
 }
-.novel-slider div.card:hover{
+.novel-slider div.card:hover {
   transform: scale(1.1);
   transition: all 0.3s;
 }
+
+div.featured-novels-row {
+  position: absolute;
+  top: 1360px;
+}
+
+div.featured-novels-card {
+  width: 18rem;
+  transition: all 0s3s;
+}
+
+div.featured-novels-card img {
+  height: 250px;
+  max-height: 250px;
+  object-fit: cover;
+}
+
+div.featured-novels-card:hover {
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
+div.featured-novels-col {
+  display: flex;
+  flex-wrap: wrap;
+}
+div.featured-novels-col div {
+  margin: 5px 20px;
+}
+
